try finish remake

--- a/docs/zh/5.md
+++ b/docs/zh/5.md
@@ -2,7 +2,7 @@
 你是否厌倦了不断地调用 `mvs()` 或写半天的循环代码？
 你可以把一些功能包装在函数中，例如：
 ```jl
-function south(n::Int) # 向下/南移动n步
+function south(n::Integer) # 向下/南移动n步
 	for i in 1:n
 		mvs()
 	end
