--- a/docs/4.md
+++ b/docs/4.md
@@ -1,6 +1,6 @@
 # 信息
 你的面前有一个密码锁，它的密码是 1~10 之间的一个整数。
-你可以使用 `send(:guess,1,2,猜测的数n)` 进行猜测。
+你可以使用 `send(st, :guess, 1, 2, 猜测的数n)` 进行猜测。
 
 # 目标
 * 如果你猜对了，请在锁位置向下走n步
@@ -11,4 +11,4 @@
 
 !!! note
 	你不能移动到锁上；
-	当且仅当你处在 `(x,y)` 或它的的4个相邻格时，可以用 `send(:guess,x,y,v)` 提交你的猜测
+	当且仅当你处在 `(x,y)` 或它的的4个相邻格时，可以提交你的猜测
