--- a/docs/6.md
+++ b/docs/6.md
@@ -9,10 +9,10 @@
 
 # 示例
 ```jl
-function task1()
-	v=pop!(look(4, 2))
-	east(6)
-	push!(look(10, 2), v)
+function task1(st)
+	v=pop!(look(st, 4, 2))
+	east_n(st, 6)
+	push!(look(st, 10, 2), v)
 end
 ```
 
